--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-action-button": "^2.8.5",
     "react-native-settings-screen": "^2.1.2",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^6.6.0",
