--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,10 +14,18 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
 
+
+        //Add these lines
+        implementation "com.google.android.gms:play-services-base:15.0.0"
+        implementation "com.google.firebase:firebase-core:15.0.2"
+        implementation "com.google.firebase:firebase-messaging:15.0.2"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+apply plugin: 'com.google.gms.google-services'
+
 
 allprojects {
     repositories {
