--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-action-button": "^2.8.5",
+    "react-native-background-timer": "^2.1.1",
     "react-native-material-buttons": "^0.6.0",
     "react-native-material-textfield": "^0.15.0",
     "react-native-picker-select": "^6.3.3",
+    "react-native-push-notification": "^3.1.9",
     "react-native-settings-screen": "^2.1.2",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^6.6.0",
