Added Facebook login button & config, need to handle the login process (signing up with auth token?)

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ target 'se7en' do
 
   pod 'react-native-background-timer', :path => '../node_modules/react-native-background-timer'
 
+  pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
+
   target 'se7enTests' do
     inherit! :search_paths
     # Pods for testing
