--- a/package.json
+++ b/package.json
@@ -29,12 +29,34 @@
     "@babel/runtime": "7.6.3",
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.9.0",
+    "detox": "^14.8.0",
     "eslint": "6.5.1",
-    "jest": "24.9.0",
+    "jest": "^24.9.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "detox": {
+    "configurations": {
+      "android.emu.debug": {
+        "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+        "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
+        "type": "android.emulator",
+        "device": {
+          "avdName": "Pixel_2_API_28"
+        }
+      },
+      "android.emu.release": {
+        "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
+        "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
+        "type": "android.emulator",
+        "device": {
+          "avdName": "Pixel_2_API_28"
+        }
+      }
+    },
+    "test-runner": "jest"
   }
 }
