--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -183,6 +183,8 @@ dependencies {
     implementation project(':react-native-background-timer')
     implementation project(':react-native-push-notification')
     implementation fileTree(dir: "libs", include: ["*.jar"])
+   
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     if (enableHermes) {
