--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/picker": "^1.1.2",
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-action-button": "^2.8.5",
@@ -22,7 +23,8 @@
     "react-native-settings-screen": "^2.1.2",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-week-view": "0.0.8"
+    "react-native-week-view": "0.0.8",
+    "react-native-wheel-datepicker": "^2.2.3"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
