--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -182,6 +182,7 @@ dependencies {
     implementation project(':react-native-fbsdk')
     implementation project(':react-native-background-timer')
     implementation project(':react-native-push-notification')
+    implementation project(':react-native-wheel-datepicker')
     implementation fileTree(dir: "libs", include: ["*.jar"])
    
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
