--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,9 +1,10 @@
 rootProject.name = 'se7en'
 include ':react-native-fbsdk'
 project(':react-native-fbsdk').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbsdk/android')
-
+include ':react-native-wheel-datepicker'
+project(':react-native-wheel-datepicker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbsdk/android')
 include ':react-native-background-timer'
-project(':react-native-background-timer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-background-timer/android')
+project(':react-native-background-timer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wheel-datepicker/android')
 include ':react-native-push-notification'
 project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-push-notification/android')
 include ':react-native-push-notification'
