--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.61.2",
     "react-native-action-button": "^2.8.5",
     "react-native-background-timer": "^2.1.1",
+    "react-native-elements": "^1.2.7",
     "react-native-fbsdk": "^1.1.1",
     "react-native-material-buttons": "^0.6.0",
     "react-native-material-textfield": "^0.15.0",
