--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 
+
 import com.android.build.OutputFile
 
 /**
@@ -184,6 +185,7 @@ dependencies {
     implementation project(':react-native-push-notification')
     implementation project(':react-native-wheel-datepicker')
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
    
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation "com.facebook.react:react-native:+"  // From node_modules
@@ -203,5 +205,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
-
+apply plugin: 'com.google.gms.google-services';
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
