--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@react-native-community/picker": "^1.1.2",
+    "firebase": "^7.5.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-action-button": "^2.8.5",
     "react-native-background-timer": "^2.1.1",
+    "react-native-elements": "^1.2.7",
     "react-native-fbsdk": "^1.1.1",
+    "react-native-gifted-chat": "^0.12.0-beta-0",
     "react-native-material-buttons": "^0.6.0",
     "react-native-material-textfield": "^0.15.0",
     "react-native-picker-select": "^6.3.3",
     "react-native-push-notification": "^3.1.9",
+    "react-native-router-flux": "^4.0.6",
     "react-native-settings-screen": "^2.1.2",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^6.6.0",
